<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.bigtangle</groupId>
	<artifactId>bigtangle</artifactId>
	<name>bigtangle</name>
	<description>The parent project for bigtangle </description>
	<url>http://www.bigtangle.org</url>
	<inceptionYear>2010</inceptionYear>
	<packaging>pom</packaging>
	<version>0.5.0</version>
	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<maven.compiler.parameters>true</maven.compiler.parameters>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.slf4j-version>2.0.6</org.slf4j-version>
		<mysql-version>8.0.33</mysql-version>
		<jackson.version>2.18.3</jackson.version>
		<org.springframework.boot.version>3.4.4</org.springframework.boot.version>
		<kafka.version>1.1.0</kafka.version>
		<junit.jupiter.version>5.11.4</junit.jupiter.version>
		<junit.platform.version>1.11.4</junit.platform.version>
	</properties>
	<modules>
		<module>bigtangle-core</module>
		<module>bigtangle-servercore</module>
		<module>bigtangle-bridge</module>
		<module>layer0-server</module>
		<module>layer0-mcmc</module>
		<module>l1-contract-server</module>
		<module>l1-order-server</module>
		<module>l1-contract-mcmc</module>
		<module>l1-order-mcmc</module>
		<module>l1-pai-server</module>
		<module>l1-pai-mcmc</module>
		<module>l1-nft-server</module>
		<module>l1-nft-mcmc</module>

	</modules>
	<dependencies>
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j-version}</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20250107</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<directory>src/main/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.2</version>
			</plugin>
			<plugin>
				<groupId>
					org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>
					3.13.0</version>
				<configuration>
					<source>25</source>
					<target>25</target>
					<parameters>true</parameters>
					<testExcludes>
						<testExclude>**/performance/**</testExclude>
					</testExcludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>
					org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.3</version>
				<configuration>
					<excludes>
						<exclude>
							**/performance/**.java
						</exclude>
					</excludes>
					<properties>
						<property>
							<name>junit</name>
							<value>true</value>
						</property>
					</properties>
					<argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
					<argLine>--add-exports java.base/java.lang=ALL-UNNAMED </argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>
					2.22.2</version>
			</plugin>

		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${org.springframework.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/bigtangle/server</url>
		</repository>
	</distributionManagement>
</project>